--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   <p>🥇Awarded <strong>Partner Certificate of Appreciation </strong> for outstanding and exemplary performance during year 2012 by Conde Nast in L&T Infotech </p>
   <p>🥇Received <strong>Employee of the quarter award with a Gold coin </strong> for the quarter Oct- Dec 2007 </p>
   <p>🥇Awarded for <strong>Excellence in IT services</strong> for the year 2006 in LDS Infotech</p>
-  <h3><a href="Myhobbies.html">My Hobbies</a></h3>
+  <h3><a href="MyHobbies.html">My Hobbies</a></h3>
 
 </body>
 
