--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <td>
         <h1>Navneet Juvatkar</h1>
         <p><em><strong><a href="https://in.linkedin.com/in/navneet-juvatkar">https://in.linkedin.com/in/navneet-juvatkar</a></strong></em></p>
-        <p>🎯An IT professional, over 14+ years of experience in IT sector (including 8+ years in Banking and Finance sector), involved and specialized in operations management of Microsoft Active Directory, Messaging, <strong>Azure, AWS
+        <p>🎯An IT professional, over 17+ years of experience in IT sector (including 10+ years in Banking and Finance sector), involved and specialized in operations management of Cloud technologies AWS, Azure, Microsoft AD, Messaging and Collaboration, O365.
           </strong>PAAS infrastructure</p>
-        <p>Proved worth in all the projects with Banking customer, US based Publication Client, manufacturing client, shipping-logistic and onsite-offshore deliveries</p>
+        <p>Proven worth in all the projects with Banking customer, US based Publication Client, manufacturing client, shipping-logistic and onsite-offshore deliveries</p>
         <p>Graduated from <strong>Mumbai University in Engineering stream</strong> in year 2003 and possess strong analytical, Team managing-mentoring-building, Vendor-customer management, decision making, problem solving, Visualizing, Interpersonal
           skills and Vision to ideate automations</p>
 
@@ -27,11 +27,11 @@
   <hr>
   <h3>Technical Certifications</h3>
   <ul>
+    <li>AWS Certified Solutions Architect - Associate</li>
     <li>Architecting Microsoft Azure Solutions</li>
     <li>Implementing Microsoft Azure Infrastructure Solutions</li>
     <li>MCSA: Cloud Platform Microsoft Certified Solutions Associate</li>
     <li>Completed <strong>Terraform Associate 2020 </strong> online Course from Udemy</li>
-    <li>Completed <strong>AWS Certified Solutions Architect – Associate</strong> online Course from Linux Academy and Udemy</li>
     <li>ITIL Foundation V3 Certified</li>
     <li>Enterprise Voice Online Services with Microsoft Lync Server 2013 (70-337)</li>
     <li>Core Solutions of Microsoft Lync Server 2013 (70-336)</li>
@@ -43,16 +43,13 @@
       <td>
         <table cellspacing='10'>
           <tr>
-            <td><strong>Microsoft</strong> Exchange</td>
+            <td><strong>AWS:</strong> Modernized cloud deployments with Managed EKS, custom networking, Karpenter with SPOT, Ingress ALB, KMS and Cloud HSM encryption, Opensearch, Heterogeneous database migrations, Route53, AWS networking, Trusted Advisor,
+Automate Stack deployments using Cloud Formation and Terraform </td>
             <td>⭐⭐⭐⭐⭐</td>
           </tr>
           <tr>
-            <td><strong>Microsoft</strong> SKYPE for Business, O365, INTUNE</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Active Directory-DNS-ADFS-AD Group Policy Managemet</td>
-            <td>⭐⭐⭐⭐</td>
+            <td><strong>Microsoft</strong>Active Directory-DNS-ADFS-AD Group Policy Managemet, Exchange, O365, INTUNE</td>
+            <td>⭐⭐⭐⭐⭐</td>
           </tr>
           <tr>
             <td><strong>Symantec</strong> Enterprise Vault, Messaging Gateway, DLP</td>
@@ -68,10 +65,6 @@
         <table cellspacing='10'>
           <tr>
             <td><strong>Azure:</strong> WebApps, AKS, Conatiner Registry,VNET Peering, Routing, Security Center, Cloudyn, Azure AD</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td><strong>AWS:</strong> EC2, S3, Route53, AWS network -VPN, VPC Peering, Cloud Trail, Beanstalk, ECS, EKS, Trusted Advisor</td>
             <td>⭐⭐⭐⭐</td>
           </tr>
           <tr>
@@ -102,8 +95,23 @@
     </thead>
     <tbody>
       <tr>
-        <td>Sept 2019-Till Date</td>
-        <td>Bank of Singapore</td>
+        <td>Oct 2021-till Date</td>
+        <td>Axis Bank, Mumbai</td>
+        <td>Assistance Vice President - IT, Cloud COE</td>
+      </tr>
+      <tr>
+        <td>Jan 2021-Oct 2021</td>
+        <td>SBI Capital Securities</td>
+        <td>Senior Manager - IT</td>
+      </tr>
+      <tr>
+        <td>Sept 2021-Jan 2021</td>
+        <td>Line Data</td>
+        <td>Manager - Cloud Service</td>
+      </tr>
+      <tr>
+        <td>Sept 2019-Sept 2020</td>
+        <td>OCBC / Bank of Singapore</td>
         <td>Assistance Vice President</td>
       </tr>
       <tr>
