--- a/index.html
+++ b/index.html
@@ -48,21 +48,9 @@ Automate Stack deployments using Cloud Formation and Terraform </td>
             <td>⭐⭐⭐⭐⭐</td>
           </tr>
           <tr>
-            <td><strong>Microsoft</strong>Active Directory-DNS-ADFS-AD Group Policy Managemet, Exchange, O365, INTUNE</td>
+            <td><strong>Microsoft</strong>Active Directory-DNS-ADFS-AD Group Policy Managemet, Exchange, O365, INTUNE, Enterprise Vault, Email Gateway, DLP</td>
             <td>⭐⭐⭐⭐⭐</td>
           </tr>
-          <tr>
-            <td><strong>Symantec</strong> Enterprise Vault, Messaging Gateway, DLP</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td><strong>Powershell</strong></td>
-            <td>⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table cellspacing='10'>
           <tr>
             <td><strong>Azure:</strong> WebApps, AKS, Conatiner Registry,VNET Peering, Routing, Security Center, Cloudyn, Azure AD</td>
             <td>⭐⭐⭐⭐</td>
@@ -158,6 +146,8 @@ Automate Stack deployments using Cloud Formation and Terraform </td>
   </table>
   <hr>
   <h3>🏆Rewards and Recognition🏆</h3>
+  <p>🥇Received <strong> Anchors Award - Team Player Fujitsu’s </strong> Q1 FY 2023-24 in Axis Bank</p>
+  <p>🥇Received <strong>Star Award </strong> in April 2022</p>
   <p>🥇Received Fujitsu’s <strong>Star Award for stabilizing service</strong> in October 2018</p>
   <p>🥇Received Fujitsu’s <strong>Star Award for stand up during crisis</strong> in June 2018</p>
   <p>🥇Received Fujitsu’s <strong>APEX Award for consistent Outstanding contribution to Business </strong> through the year 2016-17</p>
