--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
   <h3>Technical Certifications</h3>
   <ul>
     <li>AWS Certified Solutions Architect - Associate</li>
+    <td><img src="images/aws-certified-solutions-architect-associate.png" alt="AWS cert"></td>
     <li>Architecting Microsoft Azure Solutions</li>
     <li>Implementing Microsoft Azure Infrastructure Solutions</li>
     <li>MCSA: Cloud Platform Microsoft Certified Solutions Associate</li>
+    <td><img src="images/MCSA.png" alt="MS cert"></td>
     <li>Completed <strong>Terraform Associate 2020 </strong> online Course from Udemy</li>
     <li>ITIL Foundation V3 Certified</li>
-    <li>Enterprise Voice Online Services with Microsoft Lync Server 2013 (70-337)</li>
-    <li>Core Solutions of Microsoft Lync Server 2013 (70-336)</li>
+    <td><img src="images/ITIL.png" alt="AWS cert"></td>
   </ul>
   <hr>
   <h3>Skils</h3>
@@ -71,6 +72,18 @@ Automate Stack deployments using Cloud Formation and Terraform </td>
       </td>
     </tr>
   </table>
+  <hr>
+  <h3>🏆Rewards and Recognition🏆</h3>
+  <p>🥇Received <strong> Anchors Award - Team Player Fujitsu’s </strong> Q1 FY 2023-24 in Axis Bank</p>
+  <p>🥇Received Certificate for <strong>Exemplary Performance at Workspace </strong> in Axis Bank IT Townhall -Feb 2022</p>
+  <p>🥇Received Fujitsu’s <strong>Star Award for stabilizing service</strong> in October 2018</p>
+  <p>🥇Received Fujitsu’s <strong>Star Award for stand up during crisis</strong> in June 2018</p>
+  <p>🥇Received Fujitsu’s <strong>APEX Award for consistent Outstanding contribution to Business </strong> through the year 2016-17</p>
+  <p>🥇Received Fujitsu’s <strong>Asterix Award for achieving business goals </strong> in year 2014-2015</p>
+  <p>🥇Awarded <strong>Star Employee</strong> for the year 2010 - 2011 in L&T Infotech</p>
+  <p>🥇Awarded <strong>Partner Certificate of Appreciation </strong> for outstanding and exemplary performance during year 2012 by Conde Nast in L&T Infotech </p>
+  <p>🥇Received <strong>Employee of the quarter award with a Gold coin </strong> for the quarter Oct- Dec 2007 </p>
+  <p>🥇Awarded for <strong>Excellence in IT services</strong> for the year 2006 in LDS Infotech</p>
   <hr>
   <h3>Work Experience</h3>
   <table cellspacing='15'>
@@ -144,18 +157,6 @@ Automate Stack deployments using Cloud Formation and Terraform </td>
       </tr>
     </tbody>
   </table>
-  <hr>
-  <h3>🏆Rewards and Recognition🏆</h3>
-  <p>🥇Received <strong> Anchors Award - Team Player Fujitsu’s </strong> Q1 FY 2023-24 in Axis Bank</p>
-  <p>🥇Received <strong>Star Award </strong> in April 2022</p>
-  <p>🥇Received Fujitsu’s <strong>Star Award for stabilizing service</strong> in October 2018</p>
-  <p>🥇Received Fujitsu’s <strong>Star Award for stand up during crisis</strong> in June 2018</p>
-  <p>🥇Received Fujitsu’s <strong>APEX Award for consistent Outstanding contribution to Business </strong> through the year 2016-17</p>
-  <p>🥇Received Fujitsu’s <strong>Asterix Award for achieving business goals </strong> in year 2014-2015</p>
-  <p>🥇Awarded <strong>Star Employee</strong> for the year 2010 - 2011 in L&T Infotech</p>
-  <p>🥇Awarded <strong>Partner Certificate of Appreciation </strong> for outstanding and exemplary performance during year 2012 by Conde Nast in L&T Infotech </p>
-  <p>🥇Received <strong>Employee of the quarter award with a Gold coin </strong> for the quarter Oct- Dec 2007 </p>
-  <p>🥇Awarded for <strong>Excellence in IT services</strong> for the year 2006 in LDS Infotech</p>
   <h3><a href="MyHobbies.html">My Hobbies</a></h3>
 
 </body>
