--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <td><img src="images/MCSA.png" alt="MS cert"></td>
     <td><img src="images/ITIL.png" alt="AWS cert"></td>
     </tr>
+   </table>
   </ul>
   <hr>
   <h3>Skils</h3>
@@ -64,7 +65,7 @@ Automate Stack deployments using Cloud Formation and Terraform </td>
             <td>⭐⭐⭐</td>
           </tr>
           <tr>
-            <td><strong>GIT, BIT Bucket</strong></td>
+            <td><strong>GIT, BIT Bucket,Confluence, Chat GPT Prompts</strong></td>
             <td>⭐⭐⭐</td>
           </tr>
           <tr>
