--- a/index.html
+++ b/index.html
@@ -27,19 +27,15 @@
   <hr>
   <h3>Technical Certifications</h3>
   <ul>
-    <tr>
-    <td><img src="images/aws-certified-solutions-architect-associate.png" alt="AWS cert"></td>
-    <td><img src="images/MCSA.png" alt="MS cert"></td>
-    <td><img src="images/ITIL.png" alt="AWS cert"></td>
-    <td>
     <li>AWS Certified Solutions Architect - Associate</li>
     <li>Architecting Microsoft Azure Solutions</li>
     <li>Implementing Microsoft Azure Infrastructure Solutions</li>
     <li>MCSA: Cloud Platform Microsoft Certified Solutions Associate</li>
     <li>Completed <strong>Terraform Associate 2020 </strong> online Course from Udemy</li>
     <li>ITIL Foundation V3 Certified</li>
-    </td>
-    </tr>
+    <td><img src="images/aws-certified-solutions-architect-associate.png" alt="AWS cert" width="200" height="200"></td>
+    <td><img src="images/MCSA.png" alt="MS cert" width="200" height="200"></td>
+    <td><img src="images/ITIL.png" alt="ITIL cert" width="200" height="200"></td>
     </ul>
   <hr>
   <h3>Skils</h3>
