--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <li>MCSA: Cloud Platform Microsoft Certified Solutions Associate</li>
     <li>Completed <strong>Terraform Associate 2020 </strong> online Course from Udemy</li>
     <li>ITIL Foundation V3 Certified</li>
-    <td><img src="images/aws-certified-solutions-architect-associate.png" alt="AWS cert" width="80" height="80"></td>
-    <td><img src="images/MCSA.png" alt="MS cert" width="80" height="80"></td>
-    <td><img src="images/ITIL.png" alt="ITIL cert" width="80" height="80"></td>
+    <td><img src="images/aws-certified-solutions-architect-associate.png" alt="AWS cert" width="50" height="50"></td>
+    <td><img src="images/MCSA.png" alt="MS cert" width="50" height="50"></td>
+    <td><img src="images/ITIL.png" alt="ITIL cert" width="50" height="50"></td>
     </ul>
   <hr>
   <h3>Skils</h3>
@@ -49,7 +49,7 @@ Automate Stack deployments using Cloud Formation and Terraform </td>
             <td>⭐⭐⭐⭐⭐</td>
           </tr>
           <tr>
-            <td><strong>Microsoft</strong>Active Directory-DNS-ADFS-AD Group Policy Managemet, Exchange, O365, INTUNE, Enterprise Vault, Email Gateway, DLP</td>
+            <td><strong>Microsoft:</strong>Active Directory-DNS-ADFS-AD Group Policy Managemet, Exchange, O365, INTUNE, Enterprise Vault, Email Gateway, DLP</td>
             <td>⭐⭐⭐⭐⭐</td>
           </tr>
           <tr>
@@ -74,12 +74,12 @@ Automate Stack deployments using Cloud Formation and Terraform </td>
   </table>
   <hr>
   <h3>🏆Rewards and Recognition🏆</h3>
-  <p>🥇Received <strong> Anchors Award - Team Player Fujitsu’s </strong> Q1 FY 2023-24 in Axis Bank</p>
-  <p>🥇Received Certificate for <strong>Exemplary Performance at Workspace </strong> in Axis Bank IT Townhall -Feb 2022</p>
-  <p>🥇Received Fujitsu’s <strong>Star Award for stabilizing service</strong> in October 2018</p>
-  <p>🥇Received Fujitsu’s <strong>Star Award for stand up during crisis</strong> in June 2018</p>
-  <p>🥇Received Fujitsu’s <strong>APEX Award for consistent Outstanding contribution to Business </strong> through the year 2016-17</p>
-  <p>🥇Received Fujitsu’s <strong>Asterix Award for achieving business goals </strong> in year 2014-2015</p>
+  <p>🥇<strong> Anchors Award - Team Player Fujitsu’s </strong> Q1 FY 2023-24 in Axis Bank</p>
+  <p>🥇Certificate for <strong>Exemplary Performance at Workspace </strong> in Axis Bank IT Townhall -Feb 2022</p>
+  <p>🥇Fujitsu's <strong>Star Award for stabilizing service</strong> in October 2018</p>
+  <p>🥇Fujitsu’s <strong>Star Award for stand up during crisis</strong> in June 2018</p>
+  <p>🥇Fujitsu’s <strong>APEX Award for consistent Outstanding contribution to Business </strong> through the year 2016-17</p>
+  <p>🥇Fujitsu’s <strong>Asterix Award for achieving business goals </strong> in year 2014-2015</p>
   <p>🥇Awarded <strong>Star Employee</strong> for the year 2010 - 2011 in L&T Infotech</p>
   <p>🥇Awarded <strong>Partner Certificate of Appreciation </strong> for outstanding and exemplary performance during year 2012 by Conde Nast in L&T Infotech </p>
   <p>🥇Received <strong>Employee of the quarter award with a Gold coin </strong> for the quarter Oct- Dec 2007 </p>
