--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ Automate Stack deployments using Cloud Formation and Terraform </td>
   <p>🥇Awarded <strong>Partner Certificate of Appreciation </strong> for outstanding and exemplary performance during year 2012 by Conde Nast in L&T Infotech </p>
   <p>🥇Received <strong>Employee of the quarter award with a Gold coin </strong> for the quarter Oct- Dec 2007 </p>
   <p>🥇Awarded for <strong>Excellence in IT services</strong> for the year 2006 in LDS Infotech</p>
+  <li><a href="https://www.facebook.com/navneet.juvatkar/media_set?set=a.10156951830787244&type=3">Rewards Repo</a></li>
   <hr>
   <h3>Work Experience</h3>
   <table cellspacing='15'>
